--- a/Lab03/Ex4.html
+++ b/Lab03/Ex4.html
@@ -67,16 +67,24 @@
             var phone = document.registerForm.telephone.value;
             
             var mailRegex = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+            var reg_success = true;
             if (password != repeatPassword) {
                 alert("Repeat Password can not be different from Password");
+                reg_success = false;
             }
-            else if (!email.match(mailRegex)) {
-                alert("Email is in wrong format")
+            if (!email.match(mailRegex)) {
+                alert("Email is in wrong format");
+                reg_success = false;
             }
-            else if (!phone.match(/^\d{10}$/)) {
+            if (!phone.match(/^\d{10}$/)) {
                 alert("Phone number is in wrong format");
-            } else {
+                reg_success = false;
+            } 
+
+            if(reg_success) {
                 alert("Registration Success");
+            } else {
+                alert("Registration Failed");
             }
         }
     </script>
